--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@
 
 languageCode = "en-us"
 title = "VX SPIKE"
-baseURL = "https://example.com"
+baseURL = "https://blue-moss-0357acd03.azurestaticapps.net"
 theme = "hugo-html5up-alpha"
 disqusShortname = ""
 
